added empty component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,4 +13,42 @@
     width: calc(33.333% - 40px);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+}
+header {
+    background-color: #004080;
+    color: white;
+    padding: 1em 0;
+    text-align: center;
+}
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+nav ul li {
+    display: inline;
+    margin: 0 10px;
+}
+nav ul li a {
+    color: white;
+    text-decoration: none;
+}
+.container {
+    width: 80%;
+    margin: 0 auto;
+    padding: 2em 0;
+}
+footer {
+    background-color: #004080;
+    color: white;
+    text-align: center;
+    padding: 1em 0;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
   
